tooling/nargo_cli/tests/snapshots/execution_success/nested_array_with_refs/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[nested_array_with_refs] Circuit output: 0
